@@ -18,8 +18,8 @@ Battmon is simple battery monitoring program written in python for Linux systems
   if you have another python version, install [argparse](https://pypi.python.org/pypi/argparse))
 
 **Optional prerequisites:** 
-* **[libnotify](https://developer.gnome.org/libnotify/):** pop up notifications (works very well with [dunst](https://github.com/knopwob/dunst))
-* **[sox](http://sox.sourceforge.net/):** sounds
+* **[libnotify](https://developer.gnome.org/libnotify/):** pop up notifications (works fine with [dunst](https://github.com/knopwob/dunst))
+* **[sox](http://sox.sourceforge.net/)/[pulseaudio](www.pulseaudio.org):** sounds
 * screen lock programs like: [i3lock](http://i3wm.org/i3lock/), [xtrlock](http://ftp.debian.org/debian/pool/main/x/xtrlock/), [xscreensaver](http://ftp.debian.org/debian/pool/main/x/xtrlock/), [physlock](https://github.com/muennich/physlock), [xlockmore](http://www.tux.org/~bagleyd/xlockmore.html) etc, to lock user session before hibernating or suspending  
   (you can specify your favorite screen locker through command line or in config.py file)
 * **[pm-utils](http://pm-utils.freedesktop.org/wiki/):** hibernate, suspend or shutdown system on critical battery level  
